# wordle-ia

./: .coverage  README.md  pyproject.toml
tests/: test_cli.py  test_game.py
wordle_ia/: .coverage  banco_de_palavras.py  banco_palavras.py  banco_palavras_possiveis.py  banco_palavras_validas.py  cli.py  filtros.py  game.py  ia.py  palavras.py  palavras_possiveis.txt  palavras_validas.txt  score.py  test.py
