[tool.poetry]
name = "wordle-ia"
version = "0.1.0"
description = ""
authors = ["azevedo <azevedoantoniocicero@gmail.com>"]
readme = "README.md"
packages = [{include = "wordle_ia"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
