[tool.poetry]
name = "wordle-ia"
version = "0.1.0"
description = ""
authors = ["azevedo <azevedoantoniocicero@gmail.com>"]
readme = "README.md"
packages = [{include = "wordle_ia"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
rich = "^13.7.0"
numpy = "^1.26.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ." 
format = "blue . && isort ."
pre_test = "task lint"
test = "pytest -s -x --cov=wordle_ia -vv"
pos_test = "coverage html"
